--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,6 +1,7 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/SalmonDE/CrashLogger
 branches:
 - master
+- api-3.0
 projects:
   CrashLogger:
     path: ""
